--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         <link type="text/css" rel="stylesheet" href="FunForms.css" />
         <script src="builder.js" type="text/javascript"></script>
         <link type="text/css" rel="stylesheet" href="builder.css" />
+        <script type="text/javascript">
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-12379271-3']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+        </script>
     </head>
     <body>
         <div id="nojs">
@@ -221,9 +232,9 @@
                     <select id="presets">
                         <option value="#git=1&color-git=3&git-prefix=1&color-git-prefix=3&git-ahead=1&color-git-ahead=6b&git-modified=1&color-git-modified=3&git-conflicted=1&color-git-conflicted=1&git-revno=1&color-git-revno=3&git-bisect=1&color-git-bisect=5&option-submodule=1&color-option-submodule=5&git-ontag=1&color-git-ontag=3&hg=1&color-hg=5&hg-prefix=1&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&hg-conflicted=1&color-hg-conflicted=1&hg-revno=1&color-hg-revno=5&hg-bisect=1&color-hg-bisect=3&hg-patches=1&color-hg-patches=3&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&svn-revno=1&color-svn-revno=6&option-modified=%E2%96%B3&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=1&bisecting-text=bisecting&submodule-text=%5Bsubmodule%5D%20">Zen Pizza (Make Me One With Everything)</option>
                         <option value="#git=1&color-git=3&color-git-prefix=3&git-ahead=1&color-git-ahead=6b&git-modified=1&color-git-modified=3&git-conflicted=1&color-git-conflicted=1&color-git-revno=3&git-bisect=1&color-git-bisect=3b&option-submodule=1&color-option-submodule=3b&git-ontag=1&color-git-ontag=3b&hg=1&color-hg=5&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&hg-conflicted=1&color-hg-conflicted=1&color-hg-revno=5&hg-bisect=1&color-hg-bisect=5b&hg-patches=1&color-hg-patches=5b&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&svn-revno=1&color-svn-revno=6&option-modified=%E2%9C%8E&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=1&bisecting-text=%CF%9F&submodule-text=%5Bsubmodule%5D%20">Andrew Ray's</option>
-                        <option value="http://andrewray.me/bash-prompt-builder/index.html#git=1&color-git=3&color-git-prefix=3&color-git-ahead=6b&git-modified=1&color-git-modified=3&color-git-conflicted=1&color-git-revno=3&color-git-bisect=5&color-option-submodule=5&color-git-ontag=3&hg=1&color-hg=5&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&color-hg-conflicted=1&color-hg-revno=5&color-hg-bisect=3&color-hg-patches=3&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&color-svn-revno=6&no-colors=1&option-modified=%E2%96%B3&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=1&bisecting-text=bisecting&submodule-text=%5Bsubmodule%5D%20">Pretty Simple</option>
-                        <option value="http://andrewray.me/bash-prompt-builder/index.html#git=1&color-git=3&color-git-prefix=3&git-ahead=1&color-git-ahead=3b&git-modified=1&color-git-modified=3b&git-conflicted=1&color-git-conflicted=1&color-git-revno=3b&git-bisect=1&color-git-bisect=3b&option-submodule=1&color-option-submodule=3b&git-ontag=1&color-git-ontag=3&hg=1&color-hg=3&color-hg-prefix=3b&hg-modified=1&color-hg-modified=3b&hg-conflicted=1&color-hg-conflicted=1&color-hg-revno=3b&hg-bisect=1&color-hg-bisect=3b&hg-patches=1&color-hg-patches=3b&svn=1&color-svn=3&svn-modified=1&color-svn-modified=3b&svn-revno=1&color-svn-revno=3b&option-modified=%E2%96%B3&option-conflict=%E2%98%A2&color-option-conflict=3b&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=3b&bisecting-text=bisecting&submodule-text=%5Bsubmodule%5D%20">One Color Sexmachine</option>
-                        <option value="http://andrewray.me/bash-prompt-builder/index.html#git=1&color-git=3&color-git-prefix=3&color-git-ahead=6b&git-modified=1&color-git-modified=3&git-conflicted=1&color-git-conflicted=1&color-git-revno=3&git-bisect=1&color-git-bisect=2&option-submodule=1&color-option-submodule=2&color-git-ontag=3&hg=1&color-hg=5&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&hg-conflicted=1&color-hg-conflicted=1&color-hg-revno=5&hg-bisect=1&color-hg-bisect=2&hg-patches=1&color-hg-patches=2&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&svn-revno=1&color-svn-revno=6&option-modified=%E2%9C%8E&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch&color-option-nobranch=1&bisecting-text=%E2%9C%84&submodule-text=submodule%20">The Pragmatic BashMaster</option>
+                        <option value="#git=1&color-git=3&color-git-prefix=3&color-git-ahead=6b&git-modified=1&color-git-modified=3&color-git-conflicted=1&color-git-revno=3&color-git-bisect=5&color-option-submodule=5&color-git-ontag=3&hg=1&color-hg=5&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&color-hg-conflicted=1&color-hg-revno=5&color-hg-bisect=3&color-hg-patches=3&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&color-svn-revno=6&no-colors=1&option-modified=%E2%96%B3&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=1&bisecting-text=bisecting&submodule-text=%5Bsubmodule%5D%20">Pretty Simple</option>
+                        <option value="#git=1&color-git=3&color-git-prefix=3&git-ahead=1&color-git-ahead=3b&git-modified=1&color-git-modified=3b&git-conflicted=1&color-git-conflicted=1&color-git-revno=3b&git-bisect=1&color-git-bisect=3b&option-submodule=1&color-option-submodule=3b&git-ontag=1&color-git-ontag=3&hg=1&color-hg=3&color-hg-prefix=3b&hg-modified=1&color-hg-modified=3b&hg-conflicted=1&color-hg-conflicted=1&color-hg-revno=3b&hg-bisect=1&color-hg-bisect=3b&hg-patches=1&color-hg-patches=3b&svn=1&color-svn=3&svn-modified=1&color-svn-modified=3b&svn-revno=1&color-svn-revno=3b&option-modified=%E2%96%B3&option-conflict=%E2%98%A2&color-option-conflict=3b&max-conflicted-files=2&option-nobranch=no%20branch!&color-option-nobranch=3b&bisecting-text=bisecting&submodule-text=%5Bsubmodule%5D%20">One Color Sexmachine</option>
+                        <option value="#git=1&color-git=3&color-git-prefix=3&color-git-ahead=6b&git-modified=1&color-git-modified=3&git-conflicted=1&color-git-conflicted=1&color-git-revno=3&git-bisect=1&color-git-bisect=2&option-submodule=1&color-option-submodule=2&color-git-ontag=3&hg=1&color-hg=5&color-hg-prefix=5&hg-modified=1&color-hg-modified=5&hg-conflicted=1&color-hg-conflicted=1&color-hg-revno=5&hg-bisect=1&color-hg-bisect=2&hg-patches=1&color-hg-patches=2&svn=1&color-svn=6&svn-modified=1&color-svn-modified=6&svn-revno=1&color-svn-revno=6&option-modified=%E2%9C%8E&option-conflict=%E2%98%A2&color-option-conflict=3&max-conflicted-files=2&option-nobranch=no%20branch&color-option-nobranch=1&bisecting-text=%E2%9C%84&submodule-text=submodule%20">The Pragmatic BashMaster</option>
                     </select>
                 </div>
             </section>
@@ -315,6 +326,8 @@
     COLOR_BLUE=$(tput sgr0 && tput setaf 4)
     COLOR_MAGENTA=$(tput sgr0 && tput setaf 5)
     COLOR_CYAN=$(tput sgr0 && tput setaf 6)
+    COLOR_GRAY=$(tput sgr0 && tput setaf 7)
+    COLOR_WHITE=$(tput sgr0 && tput setaf 7 && tput bold)
     COLOR_LIGHTRED=$(tput sgr0 && tput setaf 1 && tput bold)
     COLOR_LIGHTGREEN=$(tput sgr0 && tput setaf 2 && tput bold)
     COLOR_LIGHTYELLOW=$(tput sgr0 && tput setaf 3 && tput bold)
@@ -417,7 +430,7 @@ dvcs_function="
                     if [ -z \"\$bisect\" ]; then
                 # /git-bisect
                 noBranch=True
-                gitBranch=\"\\[\$color-git-nobranch\\]\$NOBRANCH_TEXT\\[\$color-git\\]\"
+                gitBranch=\"\\[\$color-option-nobranch\\]\$NOBRANCH_TEXT\\[\$color-git\\]\"
                 # :git-bisect
                 else
                     bisecting=\"\\[\$color-git-bisect\\]\$BISECTING_TEXT:\"\$bisect\"\\[\$color-git\\]\"
@@ -626,7 +639,7 @@ PS1="\$(${dvcs_function})\[$COLOR_RESET\] \$ "
             </ul>
 
             <footer>
-                Page made by <a href="http://andrewray.me/">Andrew Ray</a> using entirely HTML and CSS, and <a href="http://mootools.net" target="_blank">MooTools</a>
+                Page made by <a href="http://andrewray.me/">Andrew Ray</a> using only HTML and CSS, and <a href="http://mootools.net" target="_blank">MooTools</a>
             </footer>
         </div>
         </div>
