sub header description

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="wrap">
             <header>
                 <h1>Bash Prompt Builder</h1>
+                <p class="abstract">Create a function to show Git / Hg / Svn&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;repository information in your prompt!</p>
             </header>
 
             <ul class="nav">
@@ -610,7 +611,7 @@ PS1="\$(${dvcs_function})\[$COLOR_RESET\] \$ "
 
         <h2 id="what">What is this I don't even</h2>
         <section class="what">
-            <p>This is a website for customizing your bash prompt with VCS (version control system) information. It lets you see the state of your repository at a glance.</p>
+            <p>This is a website for creating a function to put in your .bashrc file to show your Git / Hg / Subversion repository information in your bash prompt, if you do work in the prompt with version control.</p>
             <h3>Requirements</h3>
                 <ul>
                     <li><a href="http://sjl.bitbucket.org/hg-prompt/installation/" target="_blank">hg-prompt</a> if you plan to use Mercurial.</li>
