Intro for sass work

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Bash Prompt Builder - AndrewRay.me</title>
         <link href='http://fonts.googleapis.com/css?family=Quicksand|Paytone+One|Montserrat|Capricola' rel='stylesheet' type='text/css'>
-        <link type="text/css" rel="stylesheet" href="FunForms.css" />
-        <link type="text/css" rel="stylesheet" href="builder.css" />
+        <link type="text/css" rel="stylesheet" href="css/main.css" />
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-12379271-3']);
