Check .hg/branch existence before reading it.
On fresh new repositories the file .hg/branch does not exist, so we need to check its existence first, and display default if it is absent.

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ dvcs_function="
     # :hg
         # If we are in mercurial ...
         if [ -n \"\$_hg_dir\" ]; then
-            hgBranch=\`cat \"\$_hg_dir/.hg/branch\"\`
+            hgBranch=\`[ -e \"\$_hg_dir/.hg/branch\" ] && cat \"\$_hg_dir/.hg/branch\" || echo \"default\"\`
 
             hgPrompt=\"s\"
             # :hg-modified
